<package format="2">
  <name>navigation_server</name>
  <version>0.1.0</version>
  <description>Navigation server for managing map switching and trajectory initialization.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>beefast_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>